roval test verification file

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 @layer tailwind-base, primereact, tailwind-utilities;
 
 @layer tailwind-base {
-    @tailwind base;
+  @tailwind base;
 }
 
 @layer tailwind-utilities {
-    @tailwind components;
-    @tailwind utilities;
+  @tailwind components;
+  @tailwind utilities;
 }
 
-:root, body, #root {
-    @apply h-full overflow-hidden;
+:root,
+body,
+#root {
+  @apply h-full overflow-hidden;
 }
